--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "kelime-oyunu",
+    "name": "genel-kultur",
     "version": "1.0.0",
     "engines": {
         "node": ">=18.18.0 <19.0.0"
     },
-    "description": "Coğrafya Kelime Oyunu",
+    "description": "Genel Kültür Kelime Oyunu",
     "main": "server.js",
     "scripts": {
         "start": "node server.js"
